--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27160,11 +27160,11 @@ body.tp-magic-cursor #magic-cursor {
   font-weight: 700;
   font-size: 70px;
   position: absolute;
-  top: -8px;
-  left: -30px;
+  top: -53px;
+  left: 0;
   z-index: -1;
   color: transparent;
-  -webkit-text-stroke: 1px rgba(193, 237, 0, 0.6);
+  -webkit-text-stroke: 1px #E6411C;
 }
 @media (max-width: 767px) {
   .dgm-step-number {
