--- a/assets/scss/components/_background.scss
+++ b/assets/scss/components/_background.scss
@@ -52,7 +52,7 @@
 	background-color: var(--tp-common-yellow-green);
 }
 .green-regular-bg{
-	background-color: var(--tp-common-green-regular);
+	background-color: #E6411C;
 }
 .paste-bg-2{
 	background-color: var(--tp-common-paste-2);
