--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -614,7 +614,7 @@
 			display: inline-flex;
 			align-items: center;
 			justify-content: center;
-			background-color: var(--tp-common-green-regular);
+			background-color: #E6411C;
 			& span{
 				position: relative;
 				z-index: 1;
