--- a/assets/scss/layout/pages/_price.scss
+++ b/assets/scss/layout/pages/_price.scss
@@ -404,7 +404,7 @@
                             & .tp-btn-gradient{
                                 background: none;
                                 color: var(--tp-common-black);
-                                background-color: var(--tp-common-green-regular);
+                                background-color: #E6411C;
                                 &.sm{   
                                     border-radius: 0;
                                 }
