--- a/assets/scss/layout/pages/_project.scss
+++ b/assets/scss/layout/pages/_project.scss
@@ -416,7 +416,7 @@
                 visibility: hidden;
                 border-radius: 50%;
                 transform: scale(0.3);
-                background-color: var(--tp-common-green-regular);
+                background-color: #E6411C;
             }
             &:hover{
                 transition: 0.4s;
