--- a/assets/scss/layout/header/_header-1.scss
+++ b/assets/scss/layout/header/_header-1.scss
@@ -214,7 +214,7 @@
             line-height: 50px;
             border-radius: 10px;
             color: var(--tp-common-black);
-            background-color: var(--tp-common-green-regular);
+            background-color: #E6411C;
             & i{
                 width: 24px;
                 margin: 4px auto;
