--- a/assets/scss/layout/pages/_team.scss
+++ b/assets/scss/layout/pages/_team.scss
@@ -153,8 +153,8 @@
             border: 1px solid rgba(20, 20, 20, 0.1);
             &:hover{
                 color: var(--tp-common-black);
-                border-color: var(--tp-common-green-regular);
-                background-color: var(--tp-common-green-regular);
+                border-color: #E6411C;
+                background-color: #E6411C;
             }
         }
     }
