--- a/assets/scss/components/_preloader.scss
+++ b/assets/scss/components/_preloader.scss
@@ -11,7 +11,7 @@
     right: 0;
     bottom: 0;
     z-index: 1000;
-    background-color: var(--tp-theme-green);
+    background-color: #212183;
 }
 .preloader {
     width: 50px;
@@ -33,7 +33,7 @@
     width: 50px;
     height: 50px;
     border-radius: 100%;
-    background: var(--tp-common-black);
+    background: #e84117;
     animation: preloader 1.3s linear infinite;
     -webkit-animation: preloader 1.3s linear infinite;
 
