Update color scheme to enhance visual consistency across the site

--- a/assets/scss/layout/pages/_service.scss
+++ b/assets/scss/layout/pages/_service.scss
@@ -1094,7 +1094,7 @@
             overflow: hidden;
             width: 14px;
             height: 14px;
-            color: #E9FF48;
+            color: #E6411C;
             margin-left: 11px;
             display: inline-flex;
             & svg{
