--- a/assets/scss/utils/_colors.scss
+++ b/assets/scss/utils/_colors.scss
@@ -16,7 +16,7 @@ $colors: (
         'cream-3': #ffffe6,
         'yellow': #ffc446,
         'yellow-1': #FFF669,
-        'yellow-green': #E9FF48,
+        'yellow-green': #E6411C,
         'green-light': #D0FF71,
         'green-regular': #C1ED00,
         'green-solid': #17312F,
