--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -337,7 +337,7 @@ li,
   --tp-common-cream-3: #ffffe6;
   --tp-common-yellow: #ffc446;
   --tp-common-yellow-1: #FFF669;
-  --tp-common-yellow-green: #E9FF48;
+  --tp-common-yellow-green: #E6411C;
   --tp-common-green-light: #D0FF71;
   --tp-common-green-regular: #C1ED00;
   --tp-common-green-solid: #17312F;
@@ -18698,7 +18698,7 @@ body.tp-magic-cursor #magic-cursor {
   overflow: hidden;
   width: 14px;
   height: 14px;
-  color: #E9FF48;
+  color: #E6411C;
   margin-left: 11px;
   display: inline-flex;
 }
