--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1519,8 +1519,8 @@ input[type=color] {
   display: inline-block;
   letter-spacing: -0.01em;
   text-transform: uppercase;
-  color: var(--tp-common-black-9);
-  background-color: var(--tp-common-yellow-green);
+  color: #FFFFFF;
+  background-color: #E6411C;
 }
 .tp-btn-yellow-green span {
   position: relative;
@@ -5749,8 +5749,8 @@ body.tp-magic-cursor #magic-cursor {
   color: var(--tp-common-black);
 }
 .header-sticky.tp-header-9-sticky .tp-header-9-btn .tp-btn-yellow-green {
-  color: #fff;
-  background-color: #2A4C3A;
+  color: #FFFFFF;
+  background-color: #E6411C;
 }
 .header-sticky.tp-header-10-sticky .tp-header-10-wrapper {
   margin-top: 0;
