--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -751,11 +751,11 @@ textarea:focus::placeholder {
 .mega-menu-container {
   width: 900px;
   max-width: 95vw;
-  background: #ffffff;
-  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   padding: 40px;
-  animation: megaMenuSlideDown 0.3s ease forwards;
+  backdrop-filter: blur(40px);
+  background: rgba(255, 255, 255, 0.9);
+  box-shadow: 0 2px 6px 0 rgba(19, 19, 22, 0.1);
 }
 
 @keyframes megaMenuSlideDown {
