Update common green color variable for consistency in styling

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -378,7 +378,7 @@ li,
   --tp-common-yellow-1: #FFF669;
   --tp-common-yellow-green: #E6411C;
   --tp-common-green-light: #D0FF71;
-  --tp-common-green-regular: #C1ED00;
+  --tp-common-green-regular: #e6411c;
   --tp-common-green-solid: #17312F;
   --tp-common-pink-light: #FDE1DA;
   --tp-common-paste: #43D4A0;
